--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "pinia": "^2.0.32",
     "quasar": "^2.11.7",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
